# QuantLoom

./: .gitignore  README.md  pyproject.toml
configs/: local.example.yaml
docs/: CONFIGURATION.md
sample_data/1h/: AAPL.parquet  ABBV.parquet  AMAT.parquet  AMD.parquet  AMZN.parquet  ASML.parquet  AVGO.parquet  BRK.B.parquet  CAT.parquet  CSCO.parquet  GOOGL.parquet  INTC.parquet  JNJ.parquet  JPM.parquet  LLY.parquet  LRCX.parquet  MA.parquet  META.parquet  MSFT.parquet  MU.parquet  NVDA.parquet  TSLA.parquet  V.parquet  WMT.parquet  XOM.parquet
sample_data/benchmarks/1h/: SPY.parquet
src/quantloom/: _talib_compat.py  logging_utils.py  main.py
src/quantloom/backtest/: __init__.py  engine.py  metrics.py
src/quantloom/config/: __init__.py  default.yaml  grid.py  loader.py  schema.py
src/quantloom/data/: __init__.py  ingest.py  store.py  universe.py
src/quantloom/indicators/: __init__.py  core.py
src/quantloom/reporting/: graphing.py  grid_report.py  report.py
src/quantloom/signals/: __init__.py  divergence.py  extrema.py  levels.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_metrics.py  test_config.py  test_config_grid.py  test_indicators_compute_all.py  test_indicators_core.py  test_ingest.py  test_main_cli.py  test_reporting_graphing.py  test_reporting_grid_report.py  test_reporting_report.py  test_signals_compute_signals.py  test_signals_divergence.py  test_signals_extrema.py  test_signals_levels.py  test_store.py  test_strategy_buy_rules.py  test_strategy_compute.py  test_strategy_sell_rules.py  test_universe.py
(+3 files in other folders)
